--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,31 @@ collatz_c/collatz/collatz/Debug/collatz.tlog/link.command.1.tlog
 collatz_c/collatz/collatz/Debug/collatz.tlog/link.read.1.tlog
 collatz_c/collatz/collatz/Debug/collatz.tlog/link.write.1.tlog
 CollatzA.spec
+collatz_c/.vs/collatz/v16/.suo
+collatz_c/.vs/collatz/v16/Browse.VC.db
+collatz_c/.vs/collatz/v16/ipch/75ddad471c54276a.ipch
+collatz_c/.vs/collatz/v16/ipch/5147b6706c5aa960.ipch
+collatz_c/.vs/collatz/v16/ipch/937289edeef631a9.ipch
+collatz_c/.vs/collatz/v16/ipch/20082745ccd077a1.ipch
+collatz_c/.vs/collatz/v16/ipch/324210691ef757fa.ipch
+collatz_c/collatz/collatz.vcxproj
+collatz_c/collatz/collatz.vcxproj.filters
+collatz_c/collatz/collatz.vcxproj.user
+collatz_c/collatz/cpp.hint
+collatz_c/collatz/x64/Release/collatz.dll.recipe
+collatz_c/collatz/x64/Release/collatz.iobj
+collatz_c/collatz/x64/Release/collatz.ipdb
+collatz_c/collatz/x64/Release/collatz.log
+collatz_c/collatz/x64/Release/collatz.obj
+collatz_c/collatz/x64/Release/collatz.pch
+collatz_c/collatz/x64/Release/dllmain.obj
+collatz_c/collatz/x64/Release/pch.obj
+collatz_c/collatz/x64/Release/vc142.pdb
+collatz_c/collatz/x64/Release/collatz.tlog/CL.command.1.tlog
+collatz_c/collatz/x64/Release/collatz.tlog/CL.read.1.tlog
+collatz_c/collatz/x64/Release/collatz.tlog/CL.write.1.tlog
+collatz_c/collatz/x64/Release/collatz.tlog/collatz.lastbuildstate
+collatz_c/collatz/x64/Release/collatz.tlog/collatz.write.1u.tlog
+collatz_c/collatz/x64/Release/collatz.tlog/link.command.1.tlog
+collatz_c/collatz/x64/Release/collatz.tlog/link.read.1.tlog
+collatz_c/collatz/x64/Release/collatz.tlog/link.write.1.tlog
