--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,4 @@ collatz_c/collatz/x64/Release/collatz.tlog/collatz.write.1u.tlog
 collatz_c/collatz/x64/Release/collatz.tlog/link.command.1.tlog
 collatz_c/collatz/x64/Release/collatz.tlog/link.read.1.tlog
 collatz_c/collatz/x64/Release/collatz.tlog/link.write.1.tlog
+Collatz.spec
